--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "coverage": "ng test --no-watch --code-coverage",
     "commit": "git-cz",
     "netlify": "netlify",
-    "deploy:prod": "npm run build && npm run netlify deploy --prod"
+    "deploy:prod": "npm run build && netlify deploy --prod"
   },
   "private": true,
   "dependencies": {
